# diff-trees

./: .gitignore  Diff.idr  DiffAlgorithms.cabal  DiffAlgorithms.hs  FastDiff.hs  FunctorDiff.hs  GenericDiff.idr  Pretty.idr  SexpDiff.hs  stack.yaml  test1.txt  test2.txt
